# mojolicious-automake

./: .gitignore  .travis.yml  .travis.yml.offline  CHANGES  MANIFEST  Makefile.PL  README.md
.github/workflows/: unit-tests.yml
lib/Mojolicious/Command/Author/generate/: automake_app.pm  callbackery_app.pm
lib/Mojolicious/Command/Author/generate/automake_app/: .gitignore  Makefile.am  README.md  configure.ac
lib/Mojolicious/Command/Author/generate/automake_app/.github/actions/build-release-action/: Dockerfile  Dockerfile-18.04  Dockerfile-20.04  action.yaml  make-deb.sh
lib/Mojolicious/Command/Author/generate/automake_app/.github/workflows/: build-release.yaml  unit-tests.yaml
lib/Mojolicious/Command/Author/generate/automake_app/debian/: Makefile.am  changelog  control  rules
lib/Mojolicious/Command/Author/generate/automake_app/etc/: Makefile.am
lib/Mojolicious/Command/Author/generate/automake_app/lib/: App.pm  Makefile.am
lib/Mojolicious/Command/Author/generate/automake_app/t/: basic.t
lib/Mojolicious/Command/Author/generate/automake_app/t/etc/: app.cfg
lib/Mojolicious/Command/Author/generate/callbackery_app/: README.md  cpanfile
lib/Mojolicious/Command/Author/generate/callbackery_app/etc/: Makefile.am
lib/Mojolicious/Command/Author/generate/callbackery_app/frontend/: Makefile.am  Manifest.json  compile.js  compile.json
lib/Mojolicious/Command/Author/generate/callbackery_app/frontend/source/boot/: index.html
lib/Mojolicious/Command/Author/generate/callbackery_app/lib/App/GuiPlugin/: Song.pm  (+1 more)
my_app/etc/: app.conf
my_app/lib/: MyApp.pm
